add reflection support when using jdk17